<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_Shell" Id="{53a00b3e-b2d5-4f8c-8e43-f28b6b17f83e}">
    <Declaration><![CDATA[TYPE ST_Shell :
STRUCT
	stPlatform		: ST_ShellPlatform;		(*  *)
	stFlags			: ST_ShellFlags;		(*  *)
	stRecipeData	: ST_ShellRecipeData;	(*  *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>