<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_ShellFlags" Id="{ffbf7b4f-c7c6-474f-b67b-c050d34102ec}">
    <Declaration><![CDATA[TYPE ST_ShellFlags :
STRUCT
	bMachineCtrlAssignamentsDone	: BOOL := FALSE;	(*  *)
	bVisuCtrlAssignamentsDone		: BOOL := FALSE;	(*  *)
	bAlarmCtrlAssignamentsDone		: BOOL := FALSE;	(*  *)
	bRecipesCtrlAssignamentsDone	: BOOL := FALSE;	(*  *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>