<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_ShellPlatform" Id="{ee2d8026-d730-4e62-89f0-0839b7202cd7}">
    <Declaration><![CDATA[TYPE ST_ShellPlatform EXTENDS ST_UniversalPlatform :
STRUCT
	ref_fbMachineControler : REFERENCE TO FB_MachineControl;	(*  *)
	//refFbMachineSafety	: REFERENCE TO FB_MachineSafety;	(*  *)
	ref_fbVisuControler	: REFERENCE TO FB_VisuControl;			(*  *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>